# snipp

./: LICENSE  README.md  pyproject.toml  setup.py
snipp/: __init__.py  __main__.py  db.py
