[project]
name = "snipp"
version = "0.0.1"

authors = [
  { name="Ajith", email="ajithr@tuta.io" },
]

description = "Simple cli snipper saver"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/ajthr/snipp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
